fix scrolling
scrollbar begins underneath navbar now
content fills full height now

--- a/frontend/issue-tracker/src/app/issue-table/issue-table.component.scss
+++ b/frontend/issue-tracker/src/app/issue-table/issue-table.component.scss
@@ -17,14 +17,9 @@
   cursor: pointer;
 }
 
-/* mat-chip {
-  padding: 2px 4px 2px 4px;
-} */
-
 td.mat-cell, th.mat-header-cell {
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 2px;
   padding-bottom: 2px;
 }
-
