--- a/frontend/issue-tracker/src/app/nav/nav.component.scss
+++ b/frontend/issue-tracker/src/app/nav/nav.component.scss
@@ -1,7 +1,3 @@
-.sidenav-container {
-  height: 100%;
-}
-
 .sidenav {
   width: 200px;
 }
@@ -17,13 +13,6 @@
   left: 0;
   right: 0;
   z-index: 100;
-  margin-bottom: 64px;
-}
-
-
-mat-sidenav-container, mat-sidenav, mat-sidenav-content {
-  height: 100vh;
-  overflow: visible;
 }
 
 .nav-item {
@@ -36,3 +25,23 @@ mat-sidenav-container, mat-sidenav, mat-sidenav-content {
 .gap {
   margin-right: 10px;
 }
+
+mat-sidenav-container{
+  padding-top: 64px;
+  height: 100%;
+  overflow: visible;
+}
+
+mat-sidenav-content {
+  position: relative;
+  height: 100%;
+}
+
+.app-content {
+  position: absolute;
+  overflow: auto;
+  height: 100%;
+  width: 100%;
+}
+
+
